# doxybook-c

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: test-build-docs.yml
c_api/: index.html
cpp_api/: index.html
doxybook/: __init__.py  __main__.py  constants.py  doxygen.py  generator.py  node.py  property.py  runner.py  utils.py  xml_parser.py
doxybook/templates/: detail.jinja  footer.jinja
doxybook/templates/c/: detail.jinja  file.jinja
example/: index.html
example/cpp/: mkdocs.yml
example/docs/: index.md
example/docsify/: index.html
example/src/: mkdocs.yml
example/src/test_comp/include/: test_comp.h
search/: search_index.json
